<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dept3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group19.inclass03.EditActivity">

    <EditText
        android:id="@+id/name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/StringName"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="Name" />

    <EditText
        android:id="@+id/email3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/StringEmail"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/sis3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StringSIS" />

        <RadioButton
            android:id="@+id/cs3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/StringCS" />

        <RadioButton
            android:id="@+id/bio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StringBIO" />

        <RadioButton
            android:id="@+id/others3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StringOthers" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringDept"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="155dp" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="388dp" />

    <TextView
        android:id="@+id/mood3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/StringMood"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="350dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:text="@string/stringsave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
